gitops_apps/hello-world/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
