gitops_apps/hello-world/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-quay
    name: hello-quay
  name: hello-quay
spec:
  ports:
  - port: 8080
  selector:
    name: hello-quay
