gitops_apps/hello-world/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello-quay
  labels:
    app: hello-quay
    name: hello-quay
  namespace: operate-review
spec:
#  host: hello-quay.apps.ocp4.example.com
  subdomain: ''
  to:
    kind: Service
    name: hello-quay
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
